[package]
name = "jmespath_community"
description = "JMESPath is a query and transformation language for JSON"
license = "Apache-2.0"
authors = ["Maxime Labelle <springcomp@users.noreply.github.com>"]
homepage = "https://jmespath.site"
documentation = "https://docs.rs/jmespath_community/0.1.1/jmespath_community"
version = "0.1.1"
edition = "2024"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preserve_order = ["serde_json/preserve_order", "indexmap/serde"]

[dependencies]
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1"
santiago = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1.7"

[dev-dependencies]
rstest = "0.17.0"
