[package]
name = "tests"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "compliance"
path = "main.rs"

[dependencies]
clap = "2.33.3"
jmespath_community = { path = "../jmespath", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
